src/test/ui/parser/match-refactor-to-expr.stderr
error: expected one of `.`, `?`, `{`, or an operator, found `;`
  --> $DIR/match-refactor-to-expr.rs:8:9
   |
LL |         match //~ NOTE while parsing this match expression
   |         -----
   |         |
   |         while parsing this match expression
   |         help: try removing this `match`
LL |         Some(4).unwrap_or_else(5)
   |                                  - expected one of `.`, `?`, `{`, or an operator here
LL |         //~^ NOTE expected one of `.`, `?`, `{`, or an operator here
LL |         ; //~ NOTE unexpected token
   |         ^ unexpected token

error: aborting due to previous error

